terraform/aws/security_groups/sensitive_port_is_exposed_to_small_public_network.tf
resource "aws_security_group" "fail_public" {
  name        = "allow_tls1"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "TLS from VPC"
    from_port   = 2200
    to_port     = 2500
    protocol    = "-1"
    cidr_blocks = ["12.0.0.0/25"]
  }
  tags = { test = "fail" }
}
