terraform/aws/security_groups/sensitive_port_is_exposed_to_wide_private_network.tf
resource "aws_security_group" "fail_private" {
  name        = "allow_tls1"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "TLS from VPC"
    from_port   = 2200
    to_port     = 2500
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/8"]
  }
  tags = { test = "Fail" }
}
