terraform/aws/security_groups/vpc_default_security_group_accepts_all_traffic.tf
resource "aws_vpc" "mainvpc" {
  cidr_block = "10.1.0.0/16"
  tags       = { test = "fail" }
}

resource "aws_default_security_group" "default" {
  vpc_id = aws_vpc.mainvpc.id

  ingress = [
    {
      protocol  = -1
      self      = true
      from_port = 0
      to_port   = 0
    }
  ]

  egress = [
    {
      from_port = 0
      to_port   = 0
      protocol  = "-1"
    }
  ]
  tags = { test = "fail" }
}
